# pypsa-nza-data

./: .gitignore  .~lock.paper.md#  CITATION.cff  LICENSE  README.md  SETUP.md  check_config.txt  cmdline.txt  error.txt  paper.bib  paper.md  processor_tree.txt  pyproject.toml  pypsa-nza-data_README.txt  redundant dirrs.txt  sanity check_.txt  truth_test.txt
docs/: manual_inputs.md  plpeline_overview.md
helpers/: find_transpower_datasets.py
legacy/legacy_text/: Clean full test.txt  errors.txt
legacy_text/: run instructions Windows.txt
loaders/: nza_load_dynamic_data_from_url.py  nza_load_static_data_from_url.py
loaders/original/: nza_load_dynamic_data_from_url_ORIG.py  nza_load_gen_fleet_data_from_url_ORIG.py
paper/: paper.md  paperX.md
processors/: nza_convert_energy_to_power.py  nza_create_load_profile.py  nza_g-d_avg.py  nza_process_static_data.py
processors/archive/: clean_raw_dyn_data.py  compute_load_duration_curve.py  create_load_profile.py  electricity_demand_mbie.py  grid_aggregate_columns.py  nza_create_load_profile.py  nza_create_load_profile_v2.py  nza_download_all_data.py
processors/helpers/: nza_aggregate_columns_by_prefix.py  nza_check_site_coverage.py
processors/windows_latest/: clean_raw_dyn_data.py  create_load_profile.py  grid_clean_raw_static_data_002.py  nza_aggregate_columns.py  nza_create_load_profile.py  nza_cx_modality_standard.py  nza_modality_standard.py  nza_process_dynamic_data.py  nza_process_static_data.py  scenario_Reference_energy.csv
pypsa_nza_data.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+144 files in other folders)
